# typers

./: Cargo.toml  README.md  flake.nix
.github/workflows/: nix.yml
src/: bool.md  bool.rs  lib.rs  list.rs  num.rs
src/num/: bit.rs  mod.rs  num.md  unsigned.rs
