[package]
license = "MIT"
name = "typers"
authors = ["Aleod-m adriendml99@protonmail.com"]
version = "0.1.0"
edition = "2021"
description = "Type level programing"
readme = "README.md"
repository = "https://github.com/Aleod-m/typers"
keywords = ["types", "type-level", "list", "numbers"]

[dependencies]
